--- a/MvcGraduate/MvcGraduate/Views/Shared/Teacher_Layout.cshtml
+++ b/MvcGraduate/MvcGraduate/Views/Shared/Teacher_Layout.cshtml
@@ -17,8 +17,8 @@
                 <img src="~/Images/login.png" />
             </div>
         </div>
-        <div id="main">
-            <div class="main_left">
+        <div id="Teachermain">
+            <div class="Teachermain_left">
                 <ul class="title">
                     <li class="cour" style="background-image:url(../Images/data1.png);background-repeat:no-repeat;background-position:22% 50%;"><a href="#">数据统计</a></li>
                     <li style="background-image:url(../Images/1.png);background-repeat:no-repeat;background-position:14% 50%;"><a href="#">教师管理</a></li>
@@ -33,5 +33,6 @@
         </div>
     </div>
 </body>
+
 </html>
 
