--- a/MvcGraduate/MvcGraduate/Views/TeacherHome/Index.cshtml
+++ b/MvcGraduate/MvcGraduate/Views/TeacherHome/Index.cshtml
@@ -3,21 +3,19 @@
     Layout = "~/Views/Shared/Teacher_Layout.cshtml";
 }
 
-<div class="main_right">
-    <div class="main_right_left">
-        <div class="main_right_left_1">
+<div class="Teachermain_right">
+    <div class="Teachermain_right_left">
+        <div class="Teachermain_right_left_1">
             <div class="courent">
                 <ul>
                     <li>学生统计</li>
                 </ul>
-                <ul class="courent_left">
-                    <li>总人数：30</li>
-                    <li>男生：25</li>
-                    <li>女生：5</li>
-                </ul>
+            </div>
+            <div style="float:left;height:300px;margin-top:-40px; width:100%;" id="CountStudent">
+
             </div>
         </div>
-        <div class="main_right_left_2">
+        <div class="Teachermain_right_left_2">
             <div class="courent">
                 <ul>
                     <li>分数统计</li>
@@ -25,15 +23,15 @@
             </div>
         </div>
     </div>
-    <div class="main_right_right">
-        <div class="main_right_right_1">
+    <div class="Teachermain_right_right">
+        <div class="Teachermain_right_right_1">
             <div class="courent">
                 <ul>
                     <li>教师统计</li>
                 </ul>
             </div>
         </div>
-        <div class="main_right_right_2">
+        <div class="Teachermain_right_right_2">
             <div class="courent">
                 <ul>
                     <li>在线时长</li>
@@ -42,3 +40,52 @@
         </div>
     </div>
 </div>
+<script src="~/Content/ECharts/echarts-plain.js"></script>
+<script type="text/javascript">
+    // Step:3 echarts & zrender as a Global Interface by the echarts-plain.js.
+    // Step:3 echarts和zrender被echarts-plain.js写入为全局接口
+    alert("@ViewBag.Temp");
+    var tt = new Array();
+    var myChart = echarts.init(document.getElementById('CountStudent'));
+    var option = {
+        tooltip: {
+            trigger: 'axis'
+        },
+        toolbox: {
+            show: true,
+            feature: {
+                mark: { show: true },
+                dataView: { show: true, readOnly: false },
+                magicType: { show: true, type: ['line', 'bar'] },
+                restore: { show: true },
+                saveAsImage: { show: true }
+            }
+        },
+        calculable: true,
+        xAxis: [
+    {
+        type: 'value',
+        boundaryGap: [0, 0.01]
+    }
+        ],
+        yAxis: [
+    {
+        type: 'category',
+        data: tt
+    }
+        ],
+        series: [
+    {
+        name: '男生',
+        type: 'bar',
+        data: [18203, 23489, 29034, 104970, 131744, 630230]
+    },
+    {
+        name: '女生',
+        type: 'bar',
+        data: [19325, 23438, 31000, 121594, 134141, 681807]
+    }
+        ]
+    };
+    myChart.setOption(option);
+</script>
