--- a/MvcGraduate/MvcGraduat/MvcGraduate/Views/Shared/Login_Layout.cshtml
+++ b/MvcGraduate/MvcGraduat/MvcGraduate/Views/Shared/Login_Layout.cshtml
@@ -57,5 +57,19 @@
             @RenderBody()
         </div>
     </div>
+    <script src="~/Scripts/jquery.metadata.js"></script>
+    <script>
+        jQuery.extend(jQuery.validator.messages, {
+            required: "字段不能为空",
+            remote: "请修正该字段",
+            email: "请输入正确格式的电子邮件",
+            date: "请输入合法的日期",
+            number: "该字段只能为数字",
+            equalTo: "两次输入不一样",
+            maxlength: jQuery.validator.format("请输入一个长度最多是 {0} 的字符串"),
+            minlength: jQuery.validator.format("请输入一个长度最少是 {0} 的字符串")
+        });
+    </script>
 </body>
 </html>
+
