--- a/MvcGraduate/MvcGraduat/MvcGraduate/Views/TeacherHome/Index.cshtml
+++ b/MvcGraduate/MvcGraduat/MvcGraduate/Views/TeacherHome/Index.cshtml
@@ -46,6 +46,7 @@
 <script src="~/Scripts/echarts-plain-map.js"></script>
 <script src="http://code.jquery.com/jquery-latest.js"></script>
 <script type="text/javascript">
+    $('#Teacher_Navigation li:eq(0)').addClass("cour");
     // Step:3 echarts & zrender as a Global Interface by the echarts-plain.js.
     // Step:3 echarts和zrender被echarts-plain.js写入为全局接口
     var yAxis = new Array();
