--- a/MvcGraduate/MvcGraduat/MvcGraduate/Views/Shared/_Layout.cshtml
+++ b/MvcGraduate/MvcGraduat/MvcGraduate/Views/Shared/_Layout.cshtml
@@ -15,7 +15,7 @@
         <div id="logo">
             <div id="logo_left">
                 <img src="~/Images/page_logo.png" width="325" height="55" id="page_logo" />
-                <img src="~/Images/login.png" width="50" height="50" id="loginimg" />
+                <a href="javascript:;" onclick="LogOut()"><img src="~/Images/login.png" width="50" height="50" id="loginimg" /></a>
                 <div class="title_navigate">
                     <a href="@Url.Action("Index", "Home")"><div class="logo_left_title">我的主页</div></a>
                     <a href="@Url.Action("Index", "Study")"><div class="logo_left_title">我的学习</div></a>
@@ -45,6 +45,7 @@
         @Scripts.Render("~/bundles/myJs")
         @Scripts.Render("~/bundles/weiyafei")
         @RenderSection("Scripts", required: false)
+        <script type="text/javascript" src="~/Content/EasyUi/jquery.easyui.min.js"></script>
         <script>
             function ShowStudentInfoDiv() {
                 var res = $('#Js_StudentInfo').css("opacity");
@@ -62,6 +63,14 @@
                         opacity: 0
                     }, 100);
                 }
+            }
+            function LogOut() {
+                $.messager.confirm('提示', '你确定要离开吗?', function (r) {
+                    if (r) {
+                        @Session["User"]=Null;
+                        location.href="@Url.Action("Index","Account")";
+                    }
+                });
             }
         </script>
     </body>
